Acerca de mi V1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Pablo Hernán Muñoz García</title>
 </head>
+
 <body>
     <!-- Sobre mi, Habilidades, Experiencia -->
     <header>
@@ -21,5 +23,21 @@
             <label for="check" class="quitarMenu">&#215</label>
         </nav>
     </header>
+
+    <!-- Acerca de mi -->
+    <section class="acercaMi">
+        <div class="nombre">
+            
+                <h2>Pablo Hernán Muñoz García</h2>
+                <p>(Desarrollador Web Junior)</p>
+            
+        </div>
+        <br>
+        <p class="descripcion">Soy recién egresado de la Licenciatura en Ciencias Computacionales en la Universidad Autónoma
+            del Estado de Hidalgo. Quiero formar parte de una empresa en la cual pueda seguir mejorando mis habilidades y expandir mis
+            conocimientos para crecer personal y profesionalmente.
+        </p>
+    </section>
 </body>
+
 </html>
